<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tradeOffQuestionTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center_horizontal"
        android:lines="3"
        android:text="وقتی کودکم بدرفتاری می کند..."
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lowScoreText"
        android:layout_width="352dp"
        android:layout_height="65dp"
        android:gravity="center"
        android:paddingBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/item_bubble_border_grey"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/sevenTradeOff"
            android:layout_width="@dimen/tradeOff"
            android:layout_height="@dimen/answer_height"
            android:background="@drawable/trade_off_bg7"
            android:gravity="center"
            android:text="@string/seven"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/sixTradeOff"
            android:layout_width="@dimen/tradeOff"
            android:layout_height="@dimen/answer_height"
            android:background="@drawable/trade_off_bg6"
            android:gravity="center"
            android:text="@string/six"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/fiveTradeOff"
            android:layout_width="@dimen/tradeOff"
            android:layout_height="@dimen/answer_height"
            android:background="@drawable/trade_off_bg5"
            android:gravity="center"
            android:text="@string/five"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/fourTradeOff"
            android:layout_width="@dimen/tradeOff"
            android:layout_height="@dimen/answer_height"
            android:background="@drawable/trade_off_bg4"
            android:gravity="center"
            android:text="@string/four"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/threeTradeOff"
            android:layout_width="@dimen/tradeOff"
            android:layout_height="@dimen/answer_height"
            android:background="@drawable/trade_off_bg3"
            android:gravity="center"
            android:text="@string/three"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/twoTradeOff"
            android:layout_width="@dimen/tradeOff"
            android:layout_height="@dimen/answer_height"
            android:background="@drawable/trade_off_bg2"
            android:gravity="center"
            android:text="@string/two"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/oneTradeOff"
            android:layout_width="@dimen/tradeOff"
            android:layout_height="@dimen/answer_height"
            android:background="@drawable/trade_off_bg1"
            android:gravity="center"
            android:text="@string/one"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>
    <TextView
        android:id="@+id/highScoreText"
        android:layout_width="352dp"
        android:layout_height="65dp"
        android:gravity="center"
        android:paddingTop="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/item_bubble_border_grey_up"/>
</LinearLayout>