<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parent_choice_title"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/black"
        android:textSize="22sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:lines="2"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/parent_choice_desc"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:id="@+id/mother"
            android:background="@drawable/parent_choice_bg_unselected">

            <ImageView
                android:id="@+id/motherImage"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_gravity="center_horizontal|top"
                android:layout_marginTop="11dp"
                android:src="@drawable/ic_father_grey_64" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="22sp"
                android:layout_marginBottom="12dp"
                android:text="@string/mother"
                android:textColor="@android:color/black"
                android:layout_gravity="bottom|center_horizontal"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/father"
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/parent_choice_bg">

            <ImageView
                android:id="@+id/fatherImage"
                android:layout_width="64dp"
                android:layout_gravity="center_horizontal|top"
                android:layout_height="64dp"
                android:layout_marginTop="11dp"
                android:src="@drawable/ic_father_purple_64"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="22sp"
                android:layout_gravity="bottom|center_horizontal"
                android:text="@string/father"
                android:textColor="@android:color/black"
                android:layout_marginBottom="12dp" />
        </FrameLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/parentSubmit"
        android:layout_width="336dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:padding="8dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/submit"
        android:background="@drawable/continue_bg1"/>

</LinearLayout>