<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="2dp">

        <TextView
            android:id="@+id/parentalQuestionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:maxLines="3"
            android:text="وقتی کودکم بدرفتاری می کند..."
            android:textSize="18sp"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="25dp"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/one"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/parent_opt_bg1">

            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:background="@drawable/parent_num_bg1"
                android:gravity="center"
                android:text="@string/one"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginEnd="72dp"
                android:gravity="center"
                android:text="کاملا نادرست"
                android:textColor="@color/tradeoff_1"
                android:textSize="20sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/two"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/parent_opt_bg2">

            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:background="@drawable/parent_num_bg2"
                android:gravity="center"
                android:text="@string/two"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginEnd="72dp"
                android:gravity="center"
                android:text="تا حد زیادی نادرست"
                android:textColor="@color/tradeoff_2"
                android:textSize="20sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/three"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/parent_opt_bg3">

            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:background="@drawable/parent_num_bg3"
                android:gravity="center"
                android:text="@string/three"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginEnd="72dp"
                android:gravity="center"
                android:text="کمی نادرست"
                android:textColor="@color/tradeoff_3"
                android:textSize="20sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/four"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/parent_opt_bg4">

            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:background="@drawable/parent_num_bg4"
                android:gravity="center"
                android:text="@string/four"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginEnd="72dp"
                android:gravity="center"
                android:text="تقریبا درست"
                android:textColor="@color/tradeoff_4"
                android:textSize="20sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/five"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/parent_opt_bg5">

            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:background="@drawable/parent_num_bg5"
                android:gravity="center"
                android:text="@string/five"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginEnd="72dp"
                android:gravity="center"
                android:text="تا حد زیادی درست"
                android:textColor="@color/tradeoff_5"
                android:textSize="20sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/six"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/parent_opt_bg6">

            <TextView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:background="@drawable/parent_num_bg6"
                android:gravity="center"
                android:text="@string/six"
                android:textColor="@android:color/white"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginEnd="72dp"
                android:gravity="center"
                android:text="کاملا توصیف‌کننده است"
                android:textColor="@color/tradeoff_6"
                android:textSize="20sp" />
        </FrameLayout>

    </LinearLayout>

</LinearLayout>