<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/questionTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center_horizontal"
        android:lines="3"
        android:text="وقتی کودکم بدرفتاری می کند..."
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lines="2"
                android:text="موافقم"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/four"
                android:layout_width="match_parent"
                android:layout_height="@dimen/answer_height"
                android:layout_marginTop="16dp"
                android:background="@drawable/answer_bg4"
                android:gravity="center"
                android:text="@string/four"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="1px"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lines="2"
                android:text="تقریبا  موافقم"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/three"
                android:layout_width="match_parent"
                android:layout_height="@dimen/answer_height"
                android:layout_marginTop="16dp"
                android:background="@drawable/answer_bg3"

                android:gravity="center"
                android:text="@string/three"
                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="1px"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lines="2"
                android:text="مخالفم"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/two"
                android:layout_width="match_parent"
                android:layout_height="@dimen/answer_height"
                android:layout_marginTop="16dp"
                android:background="@drawable/answer_bg2"
                android:gravity="center"
                android:text="@string/two"

                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="1px"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="8dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:lines="2"
                android:text="کاملا  مخالفم"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/one"
                android:layout_width="match_parent"
                android:layout_height="@dimen/answer_height"
                android:layout_marginTop="16dp"
                android:background="@drawable/answer_bg1"
                android:gravity="center"
                android:text="@string/one"

                android:textColor="@android:color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>